[gd_scene load_steps=11 format=3 uid="uid://uqktgp8ano2r"]

[ext_resource type="Texture2D" uid="uid://chljg2dad6fwg" path="res://assets/arrowhead.png" id="1_1p3jv"]
[ext_resource type="Script" uid="uid://5qg74l3ehww2" path="res://ui/gameUI.gd" id="1_u46lt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bp81c"]
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2jjun"]
bg_color = Color(0.1458, 0.15948, 0.18, 1)

[sub_resource type="Animation" id="Animation_o5t1l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 622)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wavecounter:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fvc5t"]
resource_name = "presenttime"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wavecounter:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y50b7"]
resource_name = "presentwave"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wavecounter:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.24, 2),
"transitions": PackedFloat32Array(0.120742, 1.46409, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_s8i10"]
resource_name = "slidingDown"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1.93187, 1),
"update": 0,
"values": [Vector2(0, 436), Vector2(0, 622)]
}

[sub_resource type="Animation" id="Animation_p0jh3"]
resource_name = "slidingUp"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.450625, 0.241484),
"update": 0,
"values": [Vector2(0, 622), Vector2(0, 436)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_77c0j"]
_data = {
&"RESET": SubResource("Animation_o5t1l"),
&"presenttime": SubResource("Animation_fvc5t"),
&"presentwave": SubResource("Animation_y50b7"),
&"slidingDown": SubResource("Animation_s8i10"),
&"slidingUp": SubResource("Animation_p0jh3")
}

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_u46lt")

[node name="Root" type="Panel" parent="."]
anchors_preset = -1
anchor_left = -0.00520833
anchor_top = 0.628085
anchor_right = -0.00520833
anchor_bottom = 0.628085
offset_left = 6.0
offset_top = 215.001
offset_right = 1152.0
offset_bottom = 456.002
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_styles/panel = SubResource("StyleBoxFlat_bp81c")
metadata/_edit_use_anchors_ = true

[node name="selectPanel" type="PanelContainer" parent="Root"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.127
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.0510006
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_styles/panel = SubResource("StyleBoxFlat_2jjun")

[node name="selectableNodes" type="HBoxContainer" parent="Root/selectPanel"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15
alignment = 1

[node name="PopupButton" type="Button" parent="Root"]
layout_mode = 2
offset_left = 551.0
offset_top = -1.0
offset_right = 591.0
offset_bottom = 29.0
focus_mode = 0
toggle_mode = true
icon = ExtResource("1_1p3jv")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="."]
offset_right = 80.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 30
text = "Rocks: 12"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_77c0j")
}

[node name="wavecounter" type="Label" parent="."]
offset_left = 546.0
offset_right = 586.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 40
text = "1"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Root/PopupButton" to="." method="_on_popup_button_pressed"]
